26 July 2007: Wouter
	- cycle detection, for query state dependencies. Will attempt to
	  circumvent the cycle, but if no other targets available fails.
	- unit test for AXFR, IXFR response.

25 July 2007: Wouter
	- testbound read ADDRESS and check it.
	- test for version.bind and friends.
	- test for iterator chaining through several referrals.
	- test and fixup for refetch for glue. Refetch fails if glue
	  is still not provided.

24 July 2007: Wouter
	- Example section in config manual.
	- Addr stored for range and moment in replay.

20 July 2007: Wouter
	- Check CNAME chain before returning cache entry with CNAMEs.
	- Option harden-glue, default is on. It will discard out of zone
	  data. If disabled, performance is faster, but spoofing attempts
	  become a possibility. Note that still normalize scrubbing is done,
	  and that the potentially spoofed data is used for infrastructure
	  and not returned to the client.
	- if glue times out, refetch by asking parent of delegation again.
	  Much like asking for DS at the parent side.
	- TODO items from forgery-resilience draft.
	  and on memory handling improvements.
	- renamed module_event_timeout to module_event_noreply.
	- memory reporting code; reports on memory usage after handling
	  a network packet (not on cache replies).

19 July 2007: Wouter
	- shuffle NS selection when getting nameserver target addresses.
	- fixup of deadlock warnings, yield cpu in checklock code so that
	  freebsd scheduler selects correct process to run.
	- added identity and version config options and replies.
	- store cname messages complete answers.

18 July 2007: Wouter
	- do not query addresses, 127.0.0.1, and ::1 by default.

17 July 2007: Wouter
	- forward zone options in config file.
	- forward per zone in iterator. takes precendence over stubs.
	- fixup commithooks.
	- removed forward-to and forward-to-port features, subsumed by
	  new forward zones.
	- fix parser to handle absent server: clause.