@@ -379,7 +379,12 @@ iter_mark_cycle_targets(struct module_qstate* qstate, struct delegpt* dp)
 		if(causes_cycle(qstate, ns->name, ns->namelen, 
 			LDNS_RR_TYPE_AAAA, qstate->qinfo.qclass) ||
 		   causes_cycle(qstate, ns->name, ns->namelen, 
-			LDNS_RR_TYPE_A, qstate->qinfo.qclass))
+			LDNS_RR_TYPE_A, qstate->qinfo.qclass)) {
+			log_nametypeclass(VERB_DETAIL, "skipping target due "
+			 	"to dependency cycle (harden-glue: no may "
+				"fix this)", ns->name, LDNS_RR_TYPE_A, 
+				qstate->qinfo.qclass);
 			ns->resolved = 1;
+		}
 	}
 }
